Fixing item collision and row overflow logic

--- a/src/style/app.css
+++ b/src/style/app.css
@@ -65,5 +65,5 @@ footer {
 }
 
 [fl-container], [fl-item] {
-  border: 1px dashed #cccccc;
+  border: 1px solid #cccccc;
 }
